--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+
 body {
-  background: #333;
+  font-family: "Noto Sans", "arial", "helvetica";
 }
