--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");
 body {
   font-family: "Noto Sans", "arial", "helvetica";
 }
